Fixed text alignment issue

--- a/stylesheets/video-tutorial.css
+++ b/stylesheets/video-tutorial.css
@@ -34,7 +34,6 @@
 
 .table.indice td:last-child {
 	padding-right: 0;
-	text-align: right;
 }
 
 .table.indice a {
